Website design aswell as minor documentation!

--- a/TeamSnakWeb/web/index.html
+++ b/TeamSnakWeb/web/index.html
@@ -4,13 +4,36 @@
     <head>
         <title>Teamsnak WebPortal</title>
         <meta charset="UTF-8">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
-    <body>
-        <div>
-            <p>Flotteste Hjemmeside</p>
-            <p>Live preview her</p>
-            <p>Download link her</p>
-        </div>
-    </body>
+    <body style="background-color: #F7F9F9;">
+        <br />
+        <br />
+    <center><h2>CA1 - Gruppe 6</h2></center>
+    <br />
+    <br />
+    <br />
+    <div style="padding: 10px;  margin: auto; width: 80%; border: 3px solid #5D6D7E; border-radius: 5px; padding: 10px; background-color: #2E4053; color: white;">
+        <h3>Github</h3>
+        <p>Throughout the process of this project, Github has been a major source of communication aswell as a tool to source our coding into one place.</p>
+        <p><a href='https://github.com/2joocy/CA1' style='color: white;'>Check us out at github!</a>
+        <h3>Documentation</h3>
+        <p>We use a different architecture for each the server, and the client. 
+            The server uses a server handler, whereas the server would act as a 
+            "controller". The client is well thought of, as it contains both a 
+            client handler, and a client controller. These 2 classes communicate 
+            with eachother, and progresses data towards the GUI, which shows 
+            the following chat messages to the user</p>
+        <h3>About us</h3>
+        <p><h4>Group Members</h4></p>
+        <p>This project has been developed by group 6.</p>
+        <li>Viktor Kim Christiansen</li>
+        <li>Chris Rosendorph</li>    
+        <li>William Pfaffe</li>
+</div>
+</body>
 </html>
